--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,23 @@
-.App {
-  height: 100%;
-  width: 100%;
+html,
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  background-color: rgb(245, 245, 245);
+}
+.container {
+  margin: 80px auto 0 auto;
+  max-width: 1400px;
+}
+a {
+  text-decoration: none;
 }
 
-/* #signInButton{
-  background-color: black;
-  color: white;
-} */
-
-
-#provider{
-  background-color: white;
-}
-#textfield{
-  border-radius: 50px;
+#textField{
+  border-radius: 50px; 
+  height: 30;
+  margin: "30px";
+  background-color: #F5F5F5;
+  border-color: #808080;
+  border-width: 2px;
 }
